[tool.poetry]
name = "cscart_api_client"
version = "0.1.0"
description = "CS-Cart API Client for Python and also Human"
authors = ["Mizkino <Mizkino@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Mizkino"
repository = "https://github.com/Mizkino/cscart_api_client"
documentation = "https://github.com/Mizkino/cscart_api_client/blob/master/README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    'Programming Language :: Python :: 3',
    "Programming Language :: Python :: 3.6",
    "Topic :: Utilities",
]
packages = [
    { include="cscart", from="." },
]
[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
